--- a/bloc/my-portfolio/cubby.html
+++ b/bloc/my-portfolio/cubby.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Rachel Beiser</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
-   <div class="container">
      <nav>
        <div class="logo">
        </div>
@@ -24,19 +24,14 @@
          </ul>
        </div>
      </nav>
-   </div>
    <header class="main">
      <h1>CUBBY</h1>
      <h2 class="tag-line">Work harder, study smarter.</h2>
-     <img class="" src="">
+     <img src="Images/Group 10.png" alt="header image">
      <h3>Cubby is a cloud storage app for students that makes it possible to
        create, upload, browse, organize and collaborate on any content across any platform.</h3>
 <!--view prototype button? -->
-     <button class="button">VIEW PROTOTYPE</button>
-
-<!-- how do i link to the prototype?
-      <a href="">
-      </a> -->
+     <a href="" class="button">VIEW PROTOTYPE</a>
    </header>
    <main>
      <!-- <section class="RDT"> how do i put these into HTML?
@@ -62,6 +57,7 @@
      </section>
      <section>
        <div class="section-label">
+        <img src="Images/Discovery Phase back.png">
         <span class="label">Discovery Phase</span>
        </div>
        <div class="textblock">
@@ -80,6 +76,7 @@
            </ul>
          </div>
          <div class="survey-results">
+           <img src="Images/user survey results back.png">
            <p class="survey-1">I learned a lot from the survey results. Some of my key findings about my users were:</p>
             <div class="percent-data">
               <h2 class="percent">96%</h2>
@@ -118,7 +115,7 @@
               <h2 class="percent">62%</h2>
               <p class="percent-caption">are students</p>
             </div>
-            <!-- button here <button>View Full Survey Analysis</button> -->
+            <a href="" class="button">View Full Survey Analysis</a>
          </div>
        </div>
        <div class="textblock">
@@ -126,6 +123,7 @@
          <p class="case-study-text">To gain a deeper understanding of my users, I asked some more in-depth questions to
            two individuals and used that data to generate user personas which will more specifically capture Cubby’s target audience.</p>
          <div class="personas">
+           <!-- how to display personas? -->
          </div>
          <p class="case-study-text">After creating these personas, I decided to only include students as Cubby’s target audience so
            that I’d be able to focus exclusively on this group and create an app that caters to all of their needs.</p>
@@ -139,11 +137,31 @@
            target audience is, what their positioning is, and what are some things that make them different from the competition.
            Here are some of my findings:</p>
          <div class="comp-analysis-cards">
+           <div class="pinterest-card">
+             <img src="Images/pinterest logo.png">
+             <p class="regular-bold-title">Pinterest</p>
+             <p class="case-study-text">- Primarily used for recreational cloud storage - browsing for and saving information,
+               articles, and other forms of inspiration or ideas, with ability to share saved information with others</p>
+             <p class="case-study-text">- Used by individuals, or businesses in the commerce industry</p>
+           </div>
+           <div class="dropbox-card">
+             <img src="Images/Dropbox Logo.png">
+             <p class="regular-bold-title">Dropbox</p>
+             <p class="case-study-text">- Primarily used for uploading and sharing files</p>
+             <p class="case-study-text">- Used by professionals, students, individuals</p>
+           </div>
+           <div class="google-drive-card">
+             <img src="Images/Google Drive Logo.png">
+             <p class="regular-bold-title">Google Drive</p>
+             <p class="case-study-text">- Primarily used for creating and sharing original content</p>
+             <p class="case-study-text">- Used by students, professionals and individuals</p>
+           </div>
          </div>
       </div>
      </section>
      <section>
        <div class="section-label">
+        <img src="Images/Info Arch back.png">
         <span class="label">Information Architecture</span>
        </div>
        <div class="textblock">
@@ -152,13 +170,16 @@
            in when it comes to this cloud storage app, I created user stories to map out different tasks that a user might want to
            accomplish while using the app. I followed this exercise with a series of user flows which visually illustrate the journey
            that a user will take via the app to complete these tasks. </p>
-         <!-- buttons here <button>View User Stories</button> <button>View User Flows</button>-->
+           <a href="" class="button">View User Stories</a>
+           <a href="" class="button">View User Flows</a>
+
        </div>
        <div class="textblock">
          <h4>Wireframes</h4>
          <p class="case-study-text">Based on all previous research, I developed a series of hand-sketches which turned into wireframes
            to begin visualizing layout of the app.</p>
-           <div class="wireframes">
+           <img src="Images/Wireframe group.png">
+        <!-- should I break up the images or as a group?  <div class="wireframes">
              <img src="">
              <p class="img-label">Dashboard + create content</p>
            </div>
@@ -169,8 +190,8 @@
            <div class="wireframes">
              <img src="">
              <p class="img-label">Dashboard for mobile</p>
-           </div>
-           <!-- buttons here <button>View All Sketches and Wireframes</button> -->
+           </div> -->
+            <a href="" class="button">View All Sketches and Wireframes</a>
         </div>
        <div class="textblock">
          <h4>User Testing Round 1</h4>
@@ -192,6 +213,7 @@
      </section>
      <section>
        <div class="section-label">
+         <img src="Images/Name brainstorm.JPG">
         <span class="label">Branding & Identity</span>
        </div>
        <div class="textblock">
@@ -201,24 +223,48 @@
            classroom resource used to store and organize many different school-related things. My objective with this brand was to
            create a sense of organization and clarity which will help users block out distractions and maximize their productivity.</p>
          <div>
+           <img src="Images/Cubby Sketch.JPG">
            <h4>Designing the Logo</h4>
            <p class="case-study-text">I wanted the logo to be modern, simple and coherent as to not cause any visual distractions to
              the user. I started out by trying to incorporate the letter “C” or the whole word “Cubby” into squares and rectangles.</p>
-           <img src="">
+           <img src="Images/Logo options.png">
            <p class="case-study-text">I eventually landed on these two design options and I decided to go with option 1 as I found it
              to be more visually interesting, and some feedback I sought out matched this opinion.</p>
          </div>
+       <!-- typeface-->
          <div>
-           <h4>Typeface</h4>
-           <!--not an image but also text is formatted exactly.. what to do here? -->
+           <img src="Images/Typeface.png">
          </div>
+         </div>
+       <!-- color palette-->
          <div>
            <h4>Color Palette</h4>
-           <!--not an image but also text is formatted exactly.. what to do here? -->
+           <div class="box">
+             <div class="box-1">
+               <h4 class="white-text">#224B8A</h4>
+             </div>
+             <div class="box-2">
+               <h4 class="white-text">#153055</h4>
+             </div>
+             <div class="box-3">
+               <h4 class="white-text">#38989A</h4>
+             </div>
+             <div class="box-4">
+               <h4 class="white-text">#2B7093</h4>
+             </div>
+             <div class="box-5">
+               <h4 class="white-text">#4F639A</h4>
+             </div>
+             <div class="box-6">
+               <h4 class="black-text">#F9D032</h4>
+             </div>
+             <div class="box-7">
+               <h4 class="black-text">#FBFBEE</h4>
+             </div>
          </div>
          <p class="case-study-text">I brought some selected colors into the logo and produced the following outcome:</p>
-         <img src="">
-         <!-- button here <button>View Complete Style Guide</button> -->
+         <img src="Images/Cubby Regular Logo final.jpg">
+         <a href="" class="button">View Complete Style Guide</a>
        </div>
      </section>
      <section>
@@ -248,7 +294,7 @@
          <p class="case-study-text">As my wireframes became more polished, I ran some preference tests to help me decide on some details in my design.
            Here are two of the images that I showed testers:</p>
          <div>
-           <img src="">
+           <img src="Images/Preference Test - Buttons 2-01.png">
            <p class="img-label">Test 1: which icon color do you prefer?</p>
            <p class="case-study-text">All three of my testers told me that they liked the turquoise icons better than the yellow  ones, because they
              were easier to see. I had thought this as well, but really wanted to figure out a way to include this yellow in my designs as I thought
@@ -256,11 +302,11 @@
              readability purposes.</p>
          </div>
          <div>
-           <img src="">
+           <img src="Images/Preference Test - Cards-01.jpg">
            <p class="img-label">Test 2: which card shape do you prefer?</p>
            <p class="case-study-text">Two of my testers told me that they liked option 1 best, and one tester chose option 2. I decided to choose
              option 1 as I felt that the style aligned best with the overall brand. It evoked the greatest sense of simplicity which is something I
-             was trying to achieve, and it gave the whole interface a modern and clean look </p>
+             was trying to achieve, and it gave the whole interface a modern and clean look.</p>
          </div>
        </div>
        <div class="textblock">
@@ -275,9 +321,9 @@
              <li>2. Swap out dividing line of the “Browse” window on the desktop dashboard for a solid color in that section</li>
            </ol>
            <p class="img-label">Before</p>
-           <img src="">
+           <img src="Images/Desktop Before.png">
            <p class="img-label">After</p>
-           <img src="">
+           <img src="Images/Desktop After.png">
          </div>
          <div class="testing-card">
            <p class="testing-label">Mobile</p>
@@ -286,9 +332,9 @@
              <li>2. Modify the toolbar at the bottom of the mobile dashboard so that it doesn’t look dated</li>
            </ol>
            <p class="img-label">Before</p>
-           <img src="">
+           <img src="Images/Mobile Before.png">
            <p class="img-label">After</p>
-           <img src="">
+           <img src="Images/Mobile After.png">
          </div>
          <p class="case-study-text">To improve this project in the future, I hope to  build out the “how it works” page (as indicated with a button on
            the landing page) to explain the product’s business model and a little more about how the product will work.</p>
@@ -308,27 +354,30 @@
        </div>
      </section>
    </main>
-   <footer class="footer">
+   <footer>
      <div class="social-bar">
        <ul>
-        <li>
-          <a href="https://www.instagram.com/r.beiser/">
-            <!-- <i class=""> link to icon
-            </i> -->
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/rachelbeiser/">
-            <!-- <i class=""> link to icon
-            </i> -->
-          </a>
-        </li>
-        <li>
-          <a href="mailto:rtschechter@gmail.com">
-            <!-- <i class=""> link to icon
-            </i> -->
-          </a>
-        </li>
+         <li>
+           <a href="mailto:rtschechter@gmail.com">
+             <!-- <i class=""> link to icon
+             </i> -->
+           </a>
+         </li>
+         <li>
+           <a href="https://www.linkedin.com/in/rachelbeiser/">
+             <!-- <i class=""> link to icon
+             </i> -->
+           </a>
+         </li>
+         <li>
+           <a href="https://www.instagram.com/r.beiser/">
+             <!-- <i class=""> link to icon
+             </i> -->
+           </a>
+         </li>
+         <li>
+           <a href="https://github.com/rschechter">
+         </li>
        </ul>
      </div>
      <div class="copywrite-info">
