--- a/bloc/my-portfolio/index.html
+++ b/bloc/my-portfolio/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Rachel Beiser</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
  </head>
   <body>
-   <div class="container">
     <nav>
        <div class="logo">
        </div>
@@ -24,7 +24,6 @@
          </ul>
        </div>
      </nav>
-   </div>
    <section class="hero">
       <h1 class="my-name"> Hi, I'm Rachel!</h1>
       <h2 class="slogan">I design experiences and interfaces to help people live more fulfilled, meaningful and happy lives.</h2>
@@ -32,40 +31,41 @@
    </section>
    <section class="case-studies">
      <div class="cubby-project">
-       <a href="cubby.html">
-           <img src="">
-       </a>
+       <img src="Images/Landing page image.png">
        <h4 class="project-name">CUBBY</h4>
        <p>A cloud storage app for students built to optimize organization and productivity.</p>
-       <h3>VIEW CASE STUDY</h3>
+       <a href="cubby.html" class="button">VIEW CASE STUDY</a>
      </div>
    </section>
-   <section class="footer">
+   <footer>
      <div class="social-bar">
        <ul>
-        <li>
-          <a href="https://www.instagram.com/r.beiser/">
-            <!-- <i class=""> link to icon
-            </i> -->
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/rachelbeiser/">
-            <!-- <i class=""> link to icon
-            </i> -->
-          </a>
-        </li>
-        <li>
-          <a href="mailto:rtschechter@gmail.com">
-            <!-- <i class=""> link to icon
-            </i> -->
-          </a>
-        </li>
+         <li>
+           <a href="mailto:rtschechter@gmail.com">
+             <!-- <i class=""> link to icon
+             </i> -->
+           </a>
+         </li>
+         <li>
+           <a href="https://www.linkedin.com/in/rachelbeiser/">
+             <!-- <i class=""> link to icon
+             </i> -->
+           </a>
+         </li>
+         <li>
+           <a href="https://www.instagram.com/r.beiser/">
+             <!-- <i class=""> link to icon
+             </i> -->
+           </a>
+         </li>
+         <li>
+           <a href="https://github.com/rschechter">
+         </li>
        </ul>
      </div>
      <div class="copywrite-info">
        <p>© 2018 Rachel Beiser | Designed and Developed by Rachel Beiser</p>
      </div>
-  </section>
+  </footer>
   </body>
 </html>
