links added, RDT info and personas added, section notes added

--- a/bloc/my-portfolio/cubby.html
+++ b/bloc/my-portfolio/cubby.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
+<!-- Nav Bar-->
      <nav>
        <div class="logo">
        </div>
@@ -24,22 +25,52 @@
          </ul>
        </div>
      </nav>
+<!-- Hero-->
    <header class="main">
      <h1>CUBBY</h1>
      <h2 class="tag-line">Work harder, study smarter.</h2>
      <img src="Images/Group 10.png" alt="header image">
      <h3>Cubby is a cloud storage app for students that makes it possible to
        create, upload, browse, organize and collaborate on any content across any platform.</h3>
-<!--view prototype button? -->
-     <a href="" class="button">VIEW PROTOTYPE</a>
+     <a href="https://www.figma.com/proto/V40XYZU14ZhpDBDMaCdyf1gf/Cubby-Project-Prototypes?node-id=0%3A1&viewport=212%2C-783%2C0.230192&scaling=min-zoom" class="button">VIEW PROTOTYPE</a>
    </header>
    <main>
-     <!-- <section class="RDT"> how do i put these into HTML?
-       <div class
-     </section> -->
+<!-- RDT and Problem/Solution-->
+     <section class="RDT">
+       <div class="Roles">
+         <h3 class="bold">Roles</h3>
+         <ul>
+           <li>UX Design</li>
+           <li>Visual Design</li>
+           <li>Branding</li>
+         </ul>
+       </div>
+       <div class="Deliverables">
+         <h3 class="bold">Deliverables</h3>
+         <ul>
+           <li>User Survey</li>
+           <li>User Personas</li>
+           <li>User Stories</li>
+           <li>User Flows</li>
+           <li>Wireframes</li>
+           <li>Low and High Fi Mockups & Prototypes</li>
+           <li>User Testing</li>
+         </ul>
+       </div>
+       <div class="Tools">
+         <h3 class="bold">Tools</h3>
+         <ul>
+           <li>Figma</li>
+           <li>Adobe Illustrator</li>
+           <li>Usability Hub</li>
+           <li>Google Drive</li>
+           <li>Draw.io</li>
+         </ul>
+       </div>
+     </section>
      <section class="problem">
        <h3>Problem</h3>
-       <p class="problem-body">The client expressed interest in the cloud storage app market,
+       <p class="intro-text-body">The client expressed interest in the cloud storage app market,
          but did not have a clear vision of what they wanted their app to be or even who their target
          audience is. I needed to figure out a target audience based on gaps in the market, and to
          create an application that has the correct combination of cloud storage features to satisfy
@@ -48,13 +79,14 @@
      </section>
      <section class="solution">
        <h3>Solution</h3>
-       <p class="solution-body">By discovering that students are under-represented in the cloud storage
+       <p class="intro-text-body">By discovering that students are under-represented in the cloud storage
           market through user research and a competitive analysis, I was able to create Cubby and include
           the specific features that the client asked for. Cubby offers students the ability to create and
           share original content, upload and share existing content, and browse for and save existing content
           from the internet. All of these features also allow students to collaborate with their peers and
           teachers by sharing the files, folders, or boards in their Cubby.</p>
      </section>
+<!-- Discovery Phase-->
      <section>
        <div class="section-label">
         <img src="Images/Discovery Phase back.png">
@@ -115,7 +147,7 @@
               <h2 class="percent">62%</h2>
               <p class="percent-caption">are students</p>
             </div>
-            <a href="" class="button">View Full Survey Analysis</a>
+            <a href="https://docs.google.com/document/d/1gHEV_QX5LYId0Z8dKpsiCRZiiBjHvlIRsbgEGfqSNC4/edit?usp=sharing" class="button">View Full Survey Analysis</a>
          </div>
        </div>
        <div class="textblock">
@@ -123,7 +155,30 @@
          <p class="case-study-text">To gain a deeper understanding of my users, I asked some more in-depth questions to
            two individuals and used that data to generate user personas which will more specifically capture Cubby’s target audience.</p>
          <div class="personas">
-           <!-- how to display personas? -->
+           <p class="persona-titles">Marcus is a 21 year old student in Philadelphia, PA.</p>
+           <p class-"case-study-text">Marcus is a biology student at a top university and planning on pursuing medicine after graduation. He
+           has a lot going on now - class work, lab work and the medical school application process. He is stressed and has a lot on his plate,
+           and could definitely use a worthwhile and easy solution to help him stay organized and on top of all of his to-dos.</p>
+           <p class="regular-bold-title">Goals</p>
+           <p class="case-study-text">1. To be able to organize all of his files and collaborate with classmates on group projects</p>
+           <p class="case-study-text">1. To back up his files so that they are sade in case his computer crashes or gets stolen</p>
+           <p class="regular-bold-title">Frustrations</p>
+           <p class="case-study-text">1. He is coming close to his storage capacity in the cloud storage app he uses now and he doesn't
+             want to pay for the more expensive plan with additional storage - he is a student after all!</p>
+           <p class="case-study-text">2. With the apps he uses, he can see shared files but cannot edit them in real time. He would need to
+             download the file or document, make changes and then upload it again, and he doesn't find this method so practical.</p>
+         </div>
+         <div class="personas">
+          <p class="persona-titles">Samantha is a 26 year old social worker in White Plains, NY.</p>
+          <p class="case-study-text">Samantha is a clinical social worker who works in-house at a doctor's office and sees between 5 and 7 patients a day.
+          She needs a solution to stay organized and on top of her notes on each client. She’s also expecting her first child and would like a way
+          to organize to-buy baby items and other resources and ideas regarding her upcoming baby.</p>
+          <p class="regular-bold-title">Goals</p>
+          <p class="case-study-text">1. To organize patient information and make everything easily referenceable and to have backups of her patients’ personal files</p>
+          <p class="case-study-text">2. To collect pre-existing content from the internet such as images or articles relating to her personal life (more specifically, her soon-to-be new baby)</p>
+          <p class="regular-bold-title">Frustrations</p>
+          <p class="case-study-text">1. She doesn’t always feel that she is being provided with new content when she’s trying to collect ideas – she seems to be getting a lot of the same results in her searches</p>
+          <p class="case-study-text">2. Even though she is a working professional, she doesn’t feel that investing in a more expensive storage plan is where she should be putting her money right now</p>
          </div>
          <p class="case-study-text">After creating these personas, I decided to only include students as Cubby’s target audience so
            that I’d be able to focus exclusively on this group and create an app that caters to all of their needs.</p>
@@ -133,7 +188,7 @@
          <p class="case-study-text">It happens to be that the features that the client had asked for in their brief are also found
            within the three cloud-storage apps that my users use most: Pinterest; for browsing, saving and sharing content from the
            internet, Dropbox; for uploading and sharing users’ pre-existing content, and Google Drive; for creating and sharing
-           original content. I chose these three apps to take a closer look at by conducting a SWOT analysis, determining who their
+           original content. I chose to take a closer look at these three apps by conducting a SWOT analysis, determining who their
            target audience is, what their positioning is, and what are some things that make them different from the competition.
            Here are some of my findings:</p>
          <div class="comp-analysis-cards">
@@ -141,14 +196,14 @@
              <img src="Images/pinterest logo.png">
              <p class="regular-bold-title">Pinterest</p>
              <p class="case-study-text">- Primarily used for recreational cloud storage - browsing for and saving information,
-               articles, and other forms of inspiration or ideas, with ability to share saved information with others</p>
+               articles, and other forms of inspiration or ideas, with the ability to share saved information with others</p>
              <p class="case-study-text">- Used by individuals, or businesses in the commerce industry</p>
            </div>
            <div class="dropbox-card">
              <img src="Images/Dropbox Logo.png">
              <p class="regular-bold-title">Dropbox</p>
              <p class="case-study-text">- Primarily used for uploading and sharing files</p>
-             <p class="case-study-text">- Used by professionals, students, individuals</p>
+             <p class="case-study-text">- Used by students, professionals and individuals</p>
            </div>
            <div class="google-drive-card">
              <img src="Images/Google Drive Logo.png">
@@ -159,6 +214,7 @@
          </div>
       </div>
      </section>
+<!-- Information Architecture-->
      <section>
        <div class="section-label">
         <img src="Images/Info Arch back.png">
@@ -170,28 +226,26 @@
            in when it comes to this cloud storage app, I created user stories to map out different tasks that a user might want to
            accomplish while using the app. I followed this exercise with a series of user flows which visually illustrate the journey
            that a user will take via the app to complete these tasks. </p>
-           <a href="" class="button">View User Stories</a>
-           <a href="" class="button">View User Flows</a>
-
+           <a href="https://docs.google.com/spreadsheets/d/1WiZvl3zQ32nbzviYFA_UNBiUpR1mfpWfBC40JwUcyEc/edit?usp=sharing" class="button">View User Stories</a>
+           <a href="https://drive.google.com/drive/folders/1GkUa1-K6SMnnlSyyodOUiz7Kr32vs6yO?usp=sharing" class="button">View User Flows</a>
        </div>
        <div class="textblock">
          <h4>Wireframes</h4>
          <p class="case-study-text">Based on all previous research, I developed a series of hand-sketches which turned into wireframes
-           to begin visualizing layout of the app.</p>
-           <img src="Images/Wireframe group.png">
-        <!-- should I break up the images or as a group?  <div class="wireframes">
-             <img src="">
-             <p class="img-label">Dashboard + create content</p>
-           </div>
+           to begin visualizing the layout of the app.</p>
+          <div class="wireframes">
+            <img src="Images/WF Home + Create.jpg">
+            <p class="img-label">Dashboard + create content</p>
+          </div>
            <div class="wireframes">
-             <img src="">
-             <p class="img-label">Create new document + share/collaborate with others</p>
-           </div>
-           <div class="wireframes">
-             <img src="">
+             <img src="Images/WF mobile home.jpg">
              <p class="img-label">Dashboard for mobile</p>
+           </div>
+           <div class="wireframes">
+             <img src="Images/WF Document + Share.jpg">
+             <p class="img-label">Create new document + share/collaborate with others</p>
            </div> -->
-            <a href="" class="button">View All Sketches and Wireframes</a>
+            <a href="https://docs.google.com/document/d/1hT4RjnSZCv2oG0RakNPgymJZTGI0LJPH2wjfEuY8tEw/edit?usp=sharing" class="button">View All Sketches and Wireframes</a>
         </div>
        <div class="textblock">
          <h4>User Testing Round 1</h4>
@@ -211,6 +265,7 @@
             would have otherwise overlooked, but I became more comfortable with other people viewing and interacting with my work.</p>
        </div>
      </section>
+<!-- Branding & Identity-->
      <section>
        <div class="section-label">
          <img src="Images/Name brainstorm.JPG">
@@ -264,9 +319,10 @@
          </div>
          <p class="case-study-text">I brought some selected colors into the logo and produced the following outcome:</p>
          <img src="Images/Cubby Regular Logo final.jpg">
-         <a href="" class="button">View Complete Style Guide</a>
+         <a href="https://drive.google.com/file/d/18pswW45OV6qCPpx237fqyicvtUP3CgEb/view?usp=sharing" class="button">View Complete Style Guide</a>
        </div>
      </section>
+<!-- Visual Design-->
      <section>
        <div class="section-label">
         <span class="label">Visual Design</span>
@@ -340,6 +396,7 @@
            the landing page) to explain the product’s business model and a little more about how the product will work.</p>
        </div>
      </section>
+<!-- Conclusion-->
      <section>
        <div class="section-label">
         <span class="label">Conclusion</span>
@@ -386,10 +443,3 @@
    </footer>
  </body>
 </html>
-
-<!--
-<div class="textblock">
-  <h4>User Survey</h4>
-  <p class="case-study-text">text here</p>
-</div>
--->
