social media links added

--- a/bloc/my-portfolio/cubby.html
+++ b/bloc/my-portfolio/cubby.html
@@ -402,7 +402,6 @@
         <span class="label">Conclusion</span>
        </div>
        <div class="textblock">
-         <h4 class="conclusion">Conclusion</h4>
          <p class="case-study-text">I learned a lot while doing this project. I was really able to develop more of a hands-on understanding
            to the design process and it was interesting to see how one step leads to the next in a way that I feel truly makes sense. I
            found the multiple rounds of testing and iteration to be very productive and useful, and I am feeling much more comfortable
@@ -415,25 +414,16 @@
      <div class="social-bar">
        <ul>
          <li>
-           <a href="mailto:rtschechter@gmail.com">
-             <!-- <i class=""> link to icon
-             </i> -->
-           </a>
+           <a href="mailto:rtschechter@gmail.com"></a>
          </li>
          <li>
-           <a href="https://www.linkedin.com/in/rachelbeiser/">
-             <!-- <i class=""> link to icon
-             </i> -->
-           </a>
+           <a href="https://www.linkedin.com/in/rachelbeiser/"><i class="fab fa-linkedin-in"></i></a>
          </li>
          <li>
-           <a href="https://www.instagram.com/r.beiser/">
-             <!-- <i class=""> link to icon
-             </i> -->
-           </a>
+           <a href="https://www.instagram.com/r.beiser/"><i class="fab fa-instagram"></i></a>
          </li>
          <li>
-           <a href="https://github.com/rschechter">
+           <a href="https://github.com/rschechter"><i class="fab fa-github"></i></a>
          </li>
        </ul>
      </div>
