quick = fix in personas

--- a/bloc/my-portfolio/cubby.html
+++ b/bloc/my-portfolio/cubby.html
@@ -156,7 +156,7 @@
            two individuals and used that data to generate user personas which will more specifically capture Cubby’s target audience.</p>
          <div class="personas">
            <p class="persona-titles">Marcus is a 21 year old student in Philadelphia, PA.</p>
-           <p class-"case-study-text">Marcus is a biology student at a top university and planning on pursuing medicine after graduation. He
+           <p class="case-study-text">Marcus is a biology student at a top university and planning on pursuing medicine after graduation. He
            has a lot going on now - class work, lab work and the medical school application process. He is stressed and has a lot on his plate,
            and could definitely use a worthwhile and easy solution to help him stay organized and on top of all of his to-dos.</p>
            <p class="regular-bold-title">Goals</p>
