--- a/bloc/my-portfolio/about.html
+++ b/bloc/my-portfolio/about.html
@@ -25,7 +25,8 @@
        </div>
      </nav>
      <img src="Images/Prof.jpg">
-     <p class="slogan">Slogan goes here</p>
+     <p class="quote">"Every great design begins with an even better story."</p>
+     <p class="speaker">- Lorinda Mamo</p>
      <div class="about-body-paragraphs">
        <p class="section-tagline">Who am I?</p>
        <p class="about-body-copy">I’m a creative person in pretty much all that I
