--- a/bloc/my-portfolio/index.html
+++ b/bloc/my-portfolio/index.html
@@ -26,7 +26,7 @@
      </nav>
    <section class="hero">
       <h1 class="my-name"> Hi, I'm Rachel!</h1>
-      <h2 class="slogan">I design experiences and interfaces to help people live more fulfilled, meaningful and happy lives.</h2>
+      <h2 class="slogan">I use the power of design to humanize technology and enhance people’s lives.</h2>
       <h3 class="location">CURRENTLY BASED IN THE NYC METRO AREA</h3>
    </section>
    <section class="case-studies">
@@ -41,25 +41,16 @@
      <div class="social-bar">
        <ul>
          <li>
-           <a href="mailto:rtschechter@gmail.com">
-             <!-- <i class=""> link to icon
-             </i> -->
-           </a>
+           <a href="mailto:rtschechter@gmail.com"></a>
          </li>
          <li>
-           <a href="https://www.linkedin.com/in/rachelbeiser/">
-             <!-- <i class=""> link to icon
-             </i> -->
-           </a>
+           <a href="https://www.linkedin.com/in/rachelbeiser/"><i class="fab fa-linkedin-in"></i></a>
          </li>
          <li>
-           <a href="https://www.instagram.com/r.beiser/">
-             <!-- <i class=""> link to icon
-             </i> -->
-           </a>
+           <a href="https://www.instagram.com/r.beiser/"><i class="fab fa-instagram"></i></a>
          </li>
          <li>
-           <a href="https://github.com/rschechter">
+           <a href="https://github.com/rschechter"><i class="fab fa-github"></i></a>
          </li>
        </ul>
      </div>
