social media links updated, hero image updated

--- a/bloc/my-portfolio/index.html
+++ b/bloc/my-portfolio/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Portfolio | Rachel Beiser</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
@@ -9,6 +10,7 @@
   <body>
     <nav>
        <div class="logo">
+          <img src="Images/RB-Logo.png">
        </div>
        <div class="menu-bar">
          <ul>
@@ -31,7 +33,7 @@
    </section>
    <section class="case-studies">
      <div class="cubby-project">
-       <img src="Images/Landing page image.png">
+       <img src="Images/Landing-page-image.png">
        <h4 class="project-name">CUBBY</h4>
        <p>A cloud storage app for students built to optimize organization and productivity.</p>
        <a href="cubby.html" class="button">VIEW CASE STUDY</a>
@@ -41,16 +43,16 @@
      <div class="social-bar">
        <ul>
          <li>
-           <a href="mailto:rtschechter@gmail.com"></a>
+           <a href="mailto:rtschechter@gmail.com"><img src="Images/Mail-icon.png"></a>
          </li>
          <li>
-           <a href="https://www.linkedin.com/in/rachelbeiser/"><i class="fab fa-linkedin-in"></i></a>
+           <a href="https://www.linkedin.com/in/rachelbeiser/"><img src="Images/LinkedIn.png"></a>
          </li>
          <li>
-           <a href="https://www.instagram.com/r.beiser/"><i class="fab fa-instagram"></i></a>
+           <a href="https://www.instagram.com/r.beiser/"><img src="Images/Instagram.png"></a>
          </li>
          <li>
-           <a href="https://github.com/rschechter"><i class="fab fa-github"></i></a>
+           <a href="https://github.com/rschechter"><img src="Images/Github.png"></a>
          </li>
        </ul>
      </div>
