social media links and images updated

--- a/bloc/my-portfolio/about.html
+++ b/bloc/my-portfolio/about.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Portfolio | Rachel Beiser</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
@@ -9,6 +10,7 @@
   <body>
     <nav>
        <div class="logo">
+         <img src="Images/RB-Logo.png">
        </div>
        <div class="menu-bar">
          <ul>
@@ -24,7 +26,7 @@
          </ul>
        </div>
      </nav>
-     <img src="Images/Prof.jpg">
+     <img src="Images/About-image.png">
      <p class="quote">"Every great design begins with an even better story."</p>
      <p class="speaker">- Lorinda Mamo</p>
      <div class="about-body-paragraphs">
@@ -70,27 +72,18 @@
      <footer>
        <div class="social-bar">
          <ul>
-          <li>
-            <a href="mailto:rtschechter@gmail.com">
-              <!-- <i class=""> link to icon
-              </i> -->
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/rachelbeiser/">
-              <!-- <i class=""> link to icon
-              </i> -->
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/r.beiser/">
-              <!-- <i class=""> link to icon
-              </i> -->
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/rschechter">
-          </li>
+           <li>
+             <a href="mailto:rtschechter@gmail.com"><img src="Images/Mail-icon.png"></a>
+           </li>
+           <li>
+             <a href="https://www.linkedin.com/in/rachelbeiser/"><img src="Images/LinkedIn.png"></a>
+           </li>
+           <li>
+             <a href="https://www.instagram.com/r.beiser/"><img src="Images/Instagram.png"></a>
+           </li>
+           <li>
+             <a href="https://github.com/rschechter"><img src="Images/Github.png"></a>
+           </li>
          </ul>
        </div>
        <div class="copywrite-info">
