--- a/bloc/my-portfolio/cubby.html
+++ b/bloc/my-portfolio/cubby.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Portfolio | Rachel Beiser</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
