--- a/bloc/my-portfolio/cubby.html
+++ b/bloc/my-portfolio/cubby.html
@@ -81,7 +81,7 @@
          content, creating original content, organizing any content, uploading content, and collaboration.</p>
      </section>
      <section class="solution">
-       <img src="Images/solution-back.png"
+       <img src="Images/solution-back.png">
        <h3>Solution</h3>
        <p class="intro-text-body">By discovering that students are under-represented in the cloud storage
           market through user research and a competitive analysis, I was able to create Cubby and include
